# RaR-perf

./: .gitignore  README.md  confgen.sh  install.yml  log.py  plot.py  reg.py
confgen/: Cargo.toml
confgen/.cargo/: config.json.toml  config.toml
confgen/src/: main.rs  rar.rs  sudo.rs
templates/: config.toml.j2
