[package]
name = "confgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bon = "3.5.1"
capctl = "0.2.4"
clap = { version = "4.5.16", features = ["derive"] }
nix = { version = "0.29.0", features = ["user"] }
rootasrole-core = { version = "3.1.0", path = "../RootAsRole/rar-common" }
serde = { version = "1.0.209", features = ["rc", "derive"] }
serde_json = "1.0.127"
